# LlamaAgents

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  config.toml  config.toml.example  pyproject.toml
docs/: design.md  install.md  memory.md  queue.md  threads.md  web.md
docs/examples/: README.md  marketing-suggestions-from-rag.md  security-architect-code-review.md  story-from-txt-files.md
docs/superpowers/plans/: 2026-05-26-llama-agents.md  2026-05-27-install-wizard.md  2026-05-27-job-queue.md  (+4 more)
examples/: marketing_suggestions_from_rag.py  security_architect_code_review.py  story_from_txt_files.py
src/llama_agents/: agent.py  cli.py  config.py  errors.py  events.py  http_app.py  install.py  llama_client.py  runtime.py  sandbox.py
tests/live/: test_live_chat.py  test_memory_e2e.py  test_queue_e2e.py  test_thread_e2e.py
tests/unit/: test_agent_eviction.py  test_agent_loop.py  test_agent_plan_retrieval.py  test_cli.py  test_cli_init.py  test_cli_threads.py  test_config.py  test_errors.py  test_events.py  test_fs_tools.py  test_http_app.py  test_install.py  test_llama_client.py  test_llama_server_manager.py  test_mcp_bridge.py  test_memory_chunker.py  test_memory_db.py  test_memory_embedder.py  test_memory_recall_tool.py  test_memory_store.py  test_queue_paths.py  test_queue_worker.py  test_registry.py  test_runtime.py  test_sandbox.py  test_shell_tool.py  test_subagent_summary_return.py  test_subagent_tool.py  test_thread_ids.py  test_thread_meta.py  test_thread_migration.py  test_thread_status.py  test_thread_store.py  test_web_routes.py
(+38 files in other folders)
