[project]
name = "llama-agents"
version = "0.1.0"
description = "Local llama.cpp orchestrator with tools, subagents, and MCP bridge"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "mcp>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13.7",
    "sse-starlette>=2.1",
    "fastembed>=0.4",
    "numpy>=1.26",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
install = ["huggingface_hub>=0.24"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx[http2]",
]

[project.scripts]
llamactl = "llama_agents.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that require a running llama-server (deselect with '-m \"not live\"')",
]
addopts = "-m 'not live'"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
]
